fix: adjusted header layout on mobile devices
~ Header font size is now a little more appropriate on smaller screen
~ Removed some padding

--- a/assets/scss/critical.scss
+++ b/assets/scss/critical.scss
@@ -257,9 +257,9 @@
 @media only screen and (min-width: 22.5625em) {
   .main-description {
     h1 {
-      font-size: 4.6em;
-      padding-top: 1.923em;
-      padding-bottom: 1.923em;
+      font-size: 2.5em;
+      padding-top: 1.5em;
+      padding-bottom: 1.7em;
     }
   }
 
